--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/react-vite/src/index.css" rel="stylesheet">
     <title>Musee 4</title>
   </head>
   <body>
