--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/react-vite/src/index.css" rel="stylesheet">
-    <title>Musee 4</title>
+    <link rel="stylesheet" href="https://use.typekit.net/vtj1gce.css">
+    <title>MUSEUM SITE</title>
   </head>
   <body>
     <div id="root"></div>
